--- a/src/components/common/accent-bar/accent-bar.module.css
+++ b/src/components/common/accent-bar/accent-bar.module.css
@@ -35,7 +35,7 @@
 .title {
   margin-bottom: var(--spacing-4);
   color: var(--accent-primary);
-  font-size: var(--font-size-base-lg);
+  font-size: var(--font-size-lg);
   font-weight: var(--font-weight-bold);
   letter-spacing: var(--letter-spacing-normal);
 }
@@ -64,7 +64,7 @@
 .large .title {
   margin-bottom: var(--spacing-6);
   font-family: var(--accent-font-family);
-  font-size: var(--font-size-sm);
+  font-size: var(--font-size-lg);
   letter-spacing: var(--letter-spacing-wide);
   line-height: var(--line-height-normal);
   text-transform: uppercase;
