--- a/src/components/common/cookie-banner/cookie-banner.module.css
+++ b/src/components/common/cookie-banner/cookie-banner.module.css
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  font-size: var(--font-size-base-sm);
+  font-size: var(--font-size-sm);
   gap: var(--spacing-3);
 }
 
