--- a/src/components/common/tech-stack/tech-stack.module.css
+++ b/src/components/common/tech-stack/tech-stack.module.css
@@ -9,7 +9,7 @@
   padding: var(--spacing-1) var(--spacing-3);
   border: var(--border-default);
   color: var(--text-secondary);
-  font-size: var(--font-size-2xs);
+  font-size: var(--font-size-xs);
   font-weight: var(--font-weight-medium);
   white-space: nowrap;
 }
