--- a/src/components/home/hero/command-input.module.css
+++ b/src/components/home/hero/command-input.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: var(--spacing-3-5);
   margin: 0 auto;
-  font-size: var(--font-size-base-lg);
+  font-size: var(--font-size-lg);
   gap: var(--spacing-3);
   text-decoration: none;
   transition: var(--transition-color);
