--- a/src/global.css
+++ b/src/global.css
@@ -65,36 +65,37 @@ h6 {
 }
 
 h1 {
-  font-size: var(--font-size-xl);
+  font-size: var(--font-size-3xl);
   letter-spacing: var(--letter-spacing-tight);
   line-height: var(--line-height-tight);
 }
 
 h2 {
-  font-size: var(--font-size-lg);
+  font-size: var(--font-size-2xl);
   letter-spacing: var(--letter-spacing-tight);
   line-height: var(--line-height-tight);
 }
 
 h3 {
-  font-size: var(--font-size-md);
+  font-size: var(--font-size-xl);
   letter-spacing: var(--letter-spacing-normal);
   line-height: var(--line-height-normal);
 }
 
 h4 {
-  font-size: var(--font-size-md);
+  font-size: var(--font-size-lg);
   letter-spacing: var(--letter-spacing-normal);
   line-height: var(--line-height-normal);
 }
 
 h5 {
-  font-size: var(--font-size-sm);
+  font-size: var(--font-size-base);
   line-height: var(--line-height-normal);
 }
 
 h6 {
-  font-size: var(--font-size-base-xl);
+  font-size: var(--font-size-base);
+  font-weight: var(--font-weight-medium);
   line-height: var(--line-height-normal);
 }
 
@@ -130,7 +131,7 @@ code,
 kbd,
 pre {
   font-family: var(--mono-font-family);
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-sm);
 }
 
 /* Utility classes for manual font overrides */
