--- a/src/components/home/hero/hero.module.css
+++ b/src/components/home/hero/hero.module.css
@@ -31,6 +31,6 @@
 @media (--md-n-above) {
   .terminal-window,
   .terminal-window * {
-    font-size: inherit;
+    font-size: var(--font-size-sm);
   }
 }
